--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -16,6 +16,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-scripts": "^5.0.1",
+    "react-tooltip": "^5.3.2",
     "sass": "^1.57.1"
   },
   "devDependencies": {
@@ -24,6 +26,7 @@
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
+    "react-error-overlay": "6.0.9",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.0"
   }
